fix home page destop version x axis overflow issue

--- a/src/styles/page/home.module.css
+++ b/src/styles/page/home.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100%;
   position: relative;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 .homepage > main {
   max-width: 1400px;
